force-app/main/default/objects/Catalog_Pulse_Event__e/Catalog_Pulse_Event__e.object-meta.xml
<CustomObject>
    <description
  >Business-level catalog novelty event for the Buyer Group Catalog Pulse feature. It is NOT a raw copy of a Change Data Capture event: a thin curation layer translates a Product2 change into functional meaning (changeType, title, priority) before publishing. Consumed by an Apex subscriber that persists Catalog_Pulse_Item__c records. Publish After Commit so it only fires if the causing DML committed.</description>
    <label>Catalog Pulse Event</label>
    <pluralLabel>Catalog Pulse Events</pluralLabel>
</CustomObject>