force-app/main/default/objects/Catalog_Pulse_Event__e/fields/Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Type__c</fullName>
    <description
  >Business classification of the catalog change: NEW, PRICE_DROP, RESTOCK or UPDATED. Decided by the curation layer, not copied verbatim from CDC.</description>
    <label>Change Type</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>