force-app/main/default/objects/Catalog_Pulse_Event__e/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description
  >When the novelty becomes relevant for buyers. Used by the subscriber to set the persisted item effective date and drive the carousel ordering.</description>
    <label>Effective Date</label>
    <type>DateTime</type>
</CustomField>