force-app/main/default/objects/Catalog_Pulse_Event__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description
  >Longer human-readable description of the novelty shown in the carousel card and reusable by a future Agentforce summary action.</description>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>