force-app/main/default/objects/Catalog_Pulse_Event__e/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description
  >Relative importance of the novelty: LOW, NORMAL or HIGH. Drives ordering and future Agentforce prioritisation.</description>
    <label>Priority</label>
    <length>20</length>
    <type>Text</type>
</CustomField>