force-app/main/default/objects/Catalog_Pulse_Event__e/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description
  >Product SKU / code (Product2.StockKeepingUnit or ProductCode) for human-readable messaging and Agentforce summaries.</description>
    <label>Product Code</label>
    <length>120</length>
    <type>Text</type>
</CustomField>