force-app/main/default/objects/Catalog_Pulse_Event__e/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <description
  >Salesforce Product2 record Id affected by the change (18 chars). Kept as Text because Platform Events do not support lookup fields.</description>
    <label>Product Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>