force-app/main/default/objects/Catalog_Pulse_Event__e/fields/Segment_Key__c.field-meta.xml
<CustomField>
    <fullName>Segment_Key__c</fullName>
    <description
  >Optional functional segment key (e.g. Buyer Group name) this novelty is relevant for. Null means it applies to all segments. NEVER a hardcoded record Id; it is a functional key resolved at query time. Security is still enforced by entitlements, not by this key.</description>
    <label>Segment Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>