force-app/main/default/objects/Catalog_Pulse_Event__e/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <description
  >Object that originated the change (e.g. Product2, ProductCategoryProduct). Lets the subscriber and future consumers reason about the source without new event types.</description>
    <label>Source Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>