force-app/main/default/objects/Catalog_Pulse_Event__e/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description
  >Short human-readable headline for the novelty (e.g. "New product available").</description>
    <label>Title</label>
    <length>120</length>
    <type>Text</type>
</CustomField>